src/QColor.h


// 
// This file has been automatically generated by RaQt_maker V0.0.7.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC void * QWQColorCtor_2(int  color);
EXTERNC void * SCWQColorCtor_2(int  color);
EXTERNC void * QWQColorCtor_3(int32_t  r, int32_t  g, int32_t  b, int32_t  a);
EXTERNC void * SCWQColorCtor_3(int32_t  r, int32_t  g, int32_t  b, int32_t  a);
EXTERNC int32_t QWQColoralpha(void * obj);
EXTERNC int32_t QWQColorred(void * obj);
EXTERNC int32_t QWQColorgreen(void * obj);
EXTERNC int32_t QWQColorblue(void * obj);
EXTERNC void QWvalidateCB_QColor(void *obj, int32_t objId, char *methodName);
EXTERNC void QWQColorDtor(void *);
EXTERNC void SCWQColorDtor(void *);